# knowledge-gains-ai

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml
.claude/agents/: alpinejs-htmx-integrator.md  daisyui-frontend-expert.md
agents/: __init__.py  base_agent.py  file_processor_agent.py  file_search_agent.py  fitness_web_agent.py  handoff_agent.py  input_interpreter_agent.py  web_search_agent.py  weightlifting_coordinator.py  workflow_coordinator.py
app/: main.py  models.py  openai_client.py  schema.py  sqlite_client.py  supabase_client.py
app/static/: input.css  output.css
app/templates/: base.html  dashboard.html  day.html  equipment.html  home.html  index.html  main.html  routine.html  routine_view.html  schedule.html  workout_session.html
app/templates/shared/: _base.html  _footer.html  _header.html
database/: schema.sql
docs/: fastapi-integration.md
knowledge_gains/: README.md  main.py  requirements.txt
knowledge_gains/agents/: weightlifting_coordinator.py
knowledge_gains/database/: schema.sql
models/: responses.py
scripts/: dev.py
services/: __init__.py  base_service.py  file_processor.py  file_processor_service.py  web_search.py  workout_coordinator.py
templates/: dashboard.html  home.html  streaming_example.html  workout_session.html
